--- a/hello-gatsby/package.json
+++ b/hello-gatsby/package.json
@@ -14,8 +14,9 @@
   },
   "dependencies": {
     "gatsby": "^2.0.76",
+    "gatsby-cli": "^2.4.10",
     "gatsby-plugin-twitter": "^2.0.8",
-    "gatsby-source-filesystem": "^2.0.16",
+    "gatsby-source-filesystem": "^2.0.20",
     "gatsby-transformer-remark": "^2.2.0",
     "react": "^16.5.1",
     "react-dom": "^16.5.1"
