--- a/hello-gatsby/package.json
+++ b/hello-gatsby/package.json
@@ -13,13 +13,16 @@
     "deploy": "gatsby build --prefix-paths && gh-pages -d public"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^1.10.0",
     "gatsby": "^2.1.30",
     "gatsby-cli": "^2.4.15",
+    "gatsby-plugin-styled-components": "^3.0.7",
     "gatsby-plugin-twitter": "^2.0.12",
     "gatsby-source-filesystem": "^2.0.24",
     "gatsby-transformer-remark": "^2.3.2",
     "react": "^16.8.4",
-    "react-dom": "^16.8.4"
+    "react-dom": "^16.8.4",
+    "styled-components": "^4.1.3"
   },
   "repository": {
     "type": "git",
